apps/web/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: web
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
